application/deploy-app/ingress.yml
# Create Ingress

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress  
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: "taskurban.com"
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: templatename-appnamespace-srv
            port:
              number: 80
  - host: "localhost"
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: templatename-appnamespace-srv
            port:
              number: 80
